feat: implementing service for six number validation